Добавили Company.java, обновили Lead.java, создали CompanyRepository,реализовали миграцию Liquibase,написали тесты